--- a/AngularTest/AngularTest.csproj
+++ b/AngularTest/AngularTest.csproj
@@ -594,6 +594,7 @@
     <Content Include="Tests\lib\angular\version.txt" />
     <Content Include="Tests\lib\jquery.min.js" />
     <Content Include="Tests\lib\sinon-1.7.3.js" />
+    <Content Include="Tests\lib\toastr.js" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
