--- a/AngularTest/AngularTest.csproj
+++ b/AngularTest/AngularTest.csproj
@@ -224,6 +224,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DataContexts\CoursesDb.cs" />
+    <Compile Include="DataContexts\ICoursesDb.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
